--- a/notebooks/Federating data with FLEXible.ipynb
+++ b/notebooks/Federating data with FLEXible.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,43 +52,55 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "To federate a centralized dataset, it is required to describe the federation process in a `FedDatasetConfig` object.\n",
     "\n",
     "A `FedDatasetConfig` object has the following fields:\n",
+    "| Options compatibility   | **n_clients** | **client_names** | **weights** | **weights_per_class** | **replacement** | **classes_per_client** | **features_per_client** | **indexes_per_client** | **group_by_label_index** |\n",
+    "|-------------------------|---------------|------------------|-------------|-----------------------|-----------------|------------------------|-------------------------|------------------------|----------------------|\n",
+    "| **n_clients**           | -             | Y                | Y           | Y                     | Y               | Y                      | Y                       | N                      | N                    |\n",
+    "| **client_names**        | -             | -                | Y           | Y                     | Y               | Y                      | Y                       | Y                      | N                    |\n",
+    "| **weights**             | -             | -                | -           | N                     | Y               | Y                      | Y                       | N                      | N                    |\n",
+    "| **weights_per_class**   | -             | -                | -           | -                     | Y               | N                      | N                       | N                      | N                    |\n",
+    "| **replacement**         | -             | -                | -           | -                     | -               | Y                      | N                       | N                      | N                    |\n",
+    "| **classes_per_client**  | -             | -                | -           | -                     | -               | -                      | N                       | N                      | N                    |\n",
+    "| **features_per_client** | -             | -                | -           | -                     | -               | -                      | -                       | N                      | N                    |\n",
+    "| **indexes_per_client**  | -             | -                | -           | -                     | -               | -                      | -                       | -                      | N                    |\n",
+    "| **group_by_label_index**    | -             | -                | -           | -                     | -               | -                      | -                       | -                      | -                    |\n",
     "\n",
-    "\n",
-    "- **seed**: Optional[int]\n",
-    "    Seed used to make the federated dataset generated reproducible with this configuration. Default None.\n",
-    "- **n_clients**: Optional[int]\n",
-    "    Number of clients among which to split the centralized dataset. If client_names is also given, we consider the number of clients to be the minimun between n_clients and the length of client_names. Default None.\n",
-    "- **client_names**: Optional[List[Hashable]]\n",
-    "    Names to identifty each client, if not provided clients will be indexed using integers. If n_clients is also given, we consider the number of clients to be the minimun of n_clients and the length of client_names. Default None.\n",
-    "- **weights**: Optional[npt.NDArray], A numpy.array which provides the proportion of data to give to each client. Default None.\n",
-    "- **replacement**: bool, whether the samping procedure used to split a centralized dataset is with replacement or not. Default True\n",
-    "- **classes_per_client**: Optional[Union[int, npt.NDArray, Tuple[int]]], classes to assign to each client, if provided as an int, it is the number classes per client, if provided as a tuple of ints, it establishes a mininum and a maximum of number of classes per client, a random number sampled in such interval decides the number of classes of each client. If provided as a list, it establishes the classes assigned to each client. Default None.\n",
-    "- **features_per_client**: Optional[Union[int, npt.NDArray, Tuple[int]]], Features to assign to each client, it share the same interface as classes_per_client.\n",
-    "- **indexes_per_client**: Optional[npt.NDArray]\n",
-    "    Data indexes to assign to each client, note that this option is incompatible with **classes_per_client**, **features_per_client** options. If replacement and weights are speficied, they are ignored.\n",
-    "\n",
-    "    The following table shows the compatiblity of each option:\n",
-    "\n",
-    "    | Options compatibility   | **n_clients** | **client_names** | **weights** | **weights_per_class** | **replacement** | **classes_per_client** | **features_per_client** | **indexes_per_client** |\n",
-    "    |-------------------------|---------------|------------------|-------------|-----------------------|-----------------|------------------------|-------------------------|------------------------|\n",
-    "    | **n_clients**           | -             | Y                | Y           | Y                     | Y               | Y                      | Y                       | Y                      |\n",
-    "    | **client_names**        | Y             | -                | Y           | Y                     | Y               | Y                      | Y                       | Y                      |\n",
-    "    | **weights**             | Y             | Y                | -           | N                     | Y               | Y                      | Y                       | N                      |\n",
-    "    | **weights_per_class**   | Y             | Y                | N           | -                     | Y               | Y                      | N                       | N                      |\n",
-    "    | **replacement**         | Y             | Y                | Y           | Y                     | -               | Y                      | Y                       | N                      |\n",
-    "    | **classes_per_client**  | Y             | Y                | Y           | Y                     | Y               | -                      | N                       | N                      |\n",
-    "    | **features_per_client** | Y             | Y                | Y           | N                     | Y               | N                      | -                       | N                      |\n",
-    "    | **indexes_per_client**  | Y             | Y                | N           | N                     | N               | N                      | N                       | -                      |\n",
-    "\n"
+    "- seed: Optional[int]\n",
+    "        Seed used to make the federated dataset generated reproducible with this configuration. Default None.\n",
+    "- n_clients: int\n",
+    "        Number of clients among which to split the centralized dataset. Default 2.\n",
+    "- client_names: Optional[List[Hashable]]\n",
+    "        Names to identifty each client, if not provided clients will be indexed using integers. If n_clients is also \\\n",
+    "        given, we consider up to n_clients elements. Default None.\n",
+    "- weights: Optional[npt.NDArray]\n",
+    "        A numpy.array which provides the proportion of data to give to each client. Default None.\n",
+    "- weights_per_class: Optional[npt.NDArray]\n",
+    "        A numpy.array which provides the proportion of data to give to each client and class of the dataset to federate. \\\n",
+    "        We expect a bidimensional array of shape (n, m) where \"n\" is the number of clients and \"m\" is the number of classes of \\\n",
+    "        the dataset to federate. Default None.\n",
+    "- replacement: bool\n",
+    "        Whether the samping procedure used to split a centralized dataset is with replacement or not. Default False\n",
+    "- classes_per_client: Optional[Union[int, npt.NDArray, Tuple[int]]]\n",
+    "        Classes to assign to each client, if provided as an int, it is the number classes per client, if provided as a \\\n",
+    "        tuple of ints, it establishes a mininum and a maximum of number of classes per client, a random number sampled \\\n",
+    "        in such interval decides the number of classes of each client. If provided as a list of lists, it establishes the classes \\\n",
+    "        assigned to each client. Default None.\n",
+    "- features_per_client: Optional[Union[int, npt.NDArray, Tuple[int]]]\n",
+    "        Features to assign to each client, it share the same interface as classes_per_client. Default None.\n",
+    "- indexes_per_client: Optional[npt.NDArray]\n",
+    "        Data indexes to assign to each client. Default None.\n",
+    "- group_by_label_index: Optional[int]\n",
+    "        Index which indicates which feature unique values will be used to generate federated clients. Default None.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -107,11 +121,21 @@
     "config = FedDatasetConfig(seed = 0) # We fix a seed to make our federation reproducible\n",
     "config.n_clients = 10 # 10 clients\n",
     "config.replacement = False # ensure that clients do not share any data\n",
-    "config.classes_per_client = np.unique(train_dataset.y_data) # assign each client one class\n",
+    "config.classes_per_client = [[i] for i in np.unique(train_dataset.y_data)] # assign each client one class\n",
     "config.weights = [0.2] * config.n_clients # each client has only 20% of its assigned class"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unique(train_dataset.y_data)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -130,6 +154,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -157,6 +182,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -171,6 +197,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "n_clients = 500\n",
     "mu, sigma = 100, 1  # mean and standard deviation\n",
     "normal_weights = np.random.default_rng(seed=0).normal(mu, sigma, n_clients)  # sample random numbers\n",
@@ -198,6 +226,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -218,6 +247,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,6 +257,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -234,6 +265,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -253,12 +285,13 @@
     "        root=\".\",\n",
     "        train=True,\n",
     "        download=True,\n",
-    "        transform=transforms.ToTensor()\n",
+    "        transform=None\n",
     ")\n",
     "cifar10_dataset = Dataset.from_torchvision_dataset(cifar10)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -274,9 +307,8 @@
     "from flex.data import FedDatasetConfig\n",
     "import numpy as np\n",
     "\n",
-    "# Sample two/ten classes for each client\n",
+    "\n",
     "config = FedDatasetConfig(seed=0)\n",
-    "# config.classes_per_client = (2, 10)\n",
     "config.replacement = True # it is not clear whether clients share their data or not\n",
     "config.n_clients = 10\n",
     "num_classes = 10\n",
@@ -288,6 +320,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -306,6 +339,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -334,13 +368,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "If we want, we can normalize the dataset of each client easily, using the `map` function from `FedDataset`, for example we force each client to keep only pair labels:"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "If we want, we can normalize the dataset of each client easily, using the `map` function from `FedDataset`, for example we force each client to keep only pair labels:"
+   ]
   },
   {
    "cell_type": "code",
@@ -377,6 +412,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -401,6 +437,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -421,6 +458,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -453,6 +491,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -475,6 +514,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -489,16 +529,17 @@
    "source": [
     "import tensorflow_datasets as tfds\n",
     "\n",
-    "mnist = tfds.load(\n",
+    "ds_train, ds_test = tfds.load(\n",
     "    'mnist',\n",
-    "    split=['train'],\n",
+    "    split=['train', 'test'],\n",
     "    shuffle_files=True,\n",
     "    as_supervised=True,\n",
-    "    batch_size=-1, # this is required\n",
+    "    batch_size=-1,\n",
     ")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -511,7 +552,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcd_tf = Dataset.from_tfds_image_dataset(mnist)\n",
+    "fcd_tf = Dataset.from_tfds_image_dataset(ds_train)\n",
     "\n",
     "config_tf = FedDatasetConfig(\n",
     "    seed=0,\n",
@@ -533,6 +574,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -549,16 +591,17 @@
    "source": [
     "# Federate the dataset directly\n",
     "flex_dataset_tf = FedDataDistribution.from_config_with_tfds_image_dataset(\n",
-    "    mnist,\n",
+    "    ds_train,\n",
     "    config_tf\n",
     ")\n",
     "\n",
-    "sample = flex_dataset_tf['client_0'].X_data[0]\n",
+    "sample = flex_dataset_tf[0].X_data[0]\n",
     "import matplotlib.pyplot as plt\n",
     "plt.imshow(sample, cmap=plt.get_cmap('gray'))"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -577,11 +620,12 @@
     "        root=\".\",\n",
     "        train=True,\n",
     "        download=True,\n",
-    "        transform=transforms.ToTensor()\n",
+    "        transform=None\n",
     ")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -615,6 +659,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -640,6 +685,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -658,6 +704,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -690,6 +737,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -712,6 +760,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -736,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
