--- a/notebooks/flex_text_classification_huggingface_using_pure_torch_demo.ipynb
+++ b/notebooks/flex_text_classification_huggingface_using_pure_torch_demo.ipynb
@@ -202,10 +202,7 @@
     "\n",
     "@deploy_server_model\n",
     "def copy_server_model_to_clients(server_flex_model: FlexModel):\n",
-    "    flex_model = FlexModel()\n",
-    "    for k, v in server_flex_model.items():\n",
-    "        flex_model[k] = copy.deepcopy(v)\n",
-    "    return flex_model\n",
+    "    return copy.deepcopy(server_flex_model)\n",
     "\n",
     "server.map(copy_server_model_to_clients, clients)"
    ]
