Replace filter with select new implementation, fix notebooks too

--- a/notebooks/Federated MNIST TF example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST TF example with flexible decorators.ipynb
@@ -109,10 +109,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Filter clients\n",
+    "#Select clients\n",
     "clients_per_round=20\n",
-    "node_dropout = 1-(clients_per_round/len(clients))\n",
-    "selected_clients_pool = clients.filter(node_dropout=node_dropout)\n",
+    "selected_clients_pool = clients.select(clients_per_round)\n",
     "selected_clients = selected_clients_pool.clients\n",
     "\n",
     "print(f\"Server node is indentified by key \\\"{servers.actor_ids[0]}\\\"\")\n",
@@ -198,7 +197,7 @@
     "\n",
     "@collect_clients_weights\n",
     "def get_clients_weights(client_flex_model: FlexModel):\n",
-    "    return client_flex_model.model.get_weights()\n",
+    "    return client_flex_model[\"model\"].get_weights()\n",
     "\n",
     "aggregators.map(get_clients_weights, selected_clients)"
    ]
@@ -246,7 +245,7 @@
     "\n",
     "@set_aggregated_weights\n",
     "def set_agreggated_weights_to_server(server_flex_model: FlexModel, aggregated_weights):\n",
-    "    server_flex_model.model.set_weights(aggregated_weights) \n",
+    "    server_flex_model[\"model\"].set_weights(aggregated_weights) \n",
     "\n",
     "aggregators.map(set_agreggated_weights_to_server, servers)"
    ]
@@ -269,7 +268,7 @@
     "\n",
     "@evaluate_server_model\n",
     "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
-    "    return server_flex_model.model.evaluate(test_data.X_data, test_data.y_data, verbose=False)\n",
+    "    return server_flex_model[\"model\"].evaluate(test_data.X_data, test_data.y_data, verbose=False)\n",
     "\n",
     "metrics = servers.map(evaluate_global_model, test_data=test_data)\n",
     "print(metrics[0])"
@@ -295,8 +294,7 @@
     "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=build_server_model)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
-    "        node_dropout = 1-(clients_per_round/len(pool.clients))\n",
-    "        selected_clients_pool = pool.clients.filter(node_dropout=node_dropout)\n",
+    "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
     "        selected_clients = selected_clients_pool.clients\n",
     "        print(f\"Selected clients for this round: {len(selected_clients)}\")\n",
     "        # Deploy the server model to the selected clients\n",
@@ -319,6 +317,13 @@
    "source": [
     "train_n_rounds(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
