--- a/notebooks/Federated MNIST TF example with simplified primitives.ipynb
+++ b/notebooks/Federated MNIST TF example with simplified primitives.ipynb
@@ -94,10 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Filter clients\n",
+    "#Select clients\n",
     "clients_per_round=20\n",
-    "node_dropout = 1-(clients_per_round/len(clients))\n",
-    "selected_clients_pool = clients.filter(node_dropout=node_dropout)\n",
+    "selected_clients_pool = clients.select(clients_per_round)\n",
     "selected_clients = selected_clients_pool.clients\n",
     "\n",
     "print(f\"Server node is indentified by key \\\"{server.actor_ids[0]}\\\"\")\n",
@@ -205,8 +204,7 @@
     "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=get_model())\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
-    "        node_dropout = 1-(clients_per_round/len(pool.clients))\n",
-    "        selected_clients_pool = pool.clients.filter(node_dropout=node_dropout)\n",
+    "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
     "        selected_clients = selected_clients_pool.clients\n",
     "        print(f\"Selected clients for this round: {len(selected_clients)}\")\n",
     "        # Deploy the server model to the selected clients\n",
