--- a/notebooks/flex_text_classification_huggingface_using_pure_torch_demo.ipynb
+++ b/notebooks/flex_text_classification_huggingface_using_pure_torch_demo.ipynb
@@ -278,7 +278,7 @@
     "    X_data = tokenize_func(client_data.X_data.tolist(), client_flex_model['tokenizer'])\n",
     "    imdb_dataset = IMDbDataset(X_data, client_data.y_data)\n",
     "    imdb_loader = DataLoader(imdb_dataset, shuffle=True, batch_size=16)\n",
-    "    optimizer = AdamW(client_flex_model.model.parameters(), lr=5e-5)\n",
+    "    optimizer = AdamW(client_flex_model[\"model\"].parameters(), lr=5e-5)\n",
     "    num_epochs = 3\n",
     "    device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
     "    train_loop_func(client_flex_model['model'], imdb_loader, num_epochs, device, optimizer)\n",
@@ -410,8 +410,7 @@
     "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=define_model)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
-    "        node_dropout = 1-(clients_per_round/len(pool.clients))\n",
-    "        selected_clients_pool = pool.clients.filter(node_dropout=node_dropout)\n",
+    "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
     "        selected_clients = selected_clients_pool.clients\n",
     "        print(f\"Selected clients for this round: {len(selected_clients)}\")\n",
     "        # Deploy the server model to the selected clients\n",
