--- a/notebooks/Federating a clustering model.ipynb
+++ b/notebooks/Federating a clustering model.ipynb
@@ -150,8 +150,8 @@
     "@init_server_model\n",
     "def build_server_model(n_clusters=10):\n",
     "    flex_model = FlexModel()\n",
-    "    flex_model.model = KMeans(n_clusters=n_clusters)\n",
-    "    flex_model.model._n_threads = 1\n",
+    "    flex_model[\"model\"] = KMeans(n_clusters=n_clusters)\n",
+    "    flex_model[\"model\"]._n_threads = 1\n",
     "    return flex_model\n",
     "\n",
     "\n",
@@ -206,7 +206,7 @@
    "outputs": [],
    "source": [
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
-    "    client_flex_model.model.fit(client_data.X_data)\n",
+    "    client_flex_model[\"model\"].fit(client_data.X_data)\n",
     "\n",
     "clients.map(train)"
    ]
@@ -229,7 +229,7 @@
     "\n",
     "@collect_clients_weights\n",
     "def get_clients_weights(client_flex_model: FlexModel):\n",
-    "    return client_flex_model.model.cluster_centers_\n",
+    "    return client_flex_model[\"model\"].cluster_centers_\n",
     "\n",
     "aggregators.map(get_clients_weights, clients)\n",
     "# The same as:\n",
@@ -287,7 +287,7 @@
     "\n",
     "@set_aggregated_weights\n",
     "def set_agreggated_weights_to_server(server_flex_model: FlexModel, aggregated_weights):\n",
-    "    server_flex_model.model.cluster_centers_ = aggregated_weights\n",
+    "    server_flex_model[\"model\"].cluster_centers_ = aggregated_weights\n",
     "\n",
     "# Set aggregated weights in the server model\n",
     "aggregators.map(set_agreggated_weights_to_server, servers)\n",
@@ -313,8 +313,8 @@
     "\n",
     "@evaluate_server_model\n",
     "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
-    "    preds = server_flex_model.model.predict(test_data.X_data)\n",
-    "    plot_k_means(server_flex_model.model, test_data.X_data, title=\"K-means using federated data\")\n",
+    "    preds = server_flex_model[\"model\"].predict(test_data.X_data)\n",
+    "    plot_k_means(server_flex_model[\"model\"], test_data.X_data, title=\"K-means using federated data\")\n",
     "    score_model(test_data.y_data, preds)\n",
     "\n",
     "servers.map(evaluate_global_model, test_data=test_iris)"
@@ -386,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
