--- a/notebooks/flex_text_classification_huggingface_using_trainer_demo.ipynb
+++ b/notebooks/flex_text_classification_huggingface_using_trainer_demo.ipynb
@@ -408,8 +408,7 @@
     "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=define_model)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
-    "        node_dropout = 1-(clients_per_round/len(pool.clients))\n",
-    "        selected_clients_pool = pool.clients.filter(node_dropout=node_dropout)\n",
+    "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
     "        selected_clients = selected_clients_pool.clients\n",
     "        print(f\"Selected clients for this round: {len(selected_clients)}\")\n",
     "        # Deploy the server model to the selected clients\n",
