--- a/notebooks/Create custom architectures using FLEXible.ipynb
+++ b/notebooks/Create custom architectures using FLEXible.ipynb
@@ -53,6 +53,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For each custom architecture, we're going to use the client's ids. As we didn't specify any custom client's ids, our ids are going to be numerical from 1 to N_clients.\n",
+    "\n",
     "Now it's time to create some functions to create custom architectures."
    ]
   },
@@ -68,9 +70,10 @@
     "            \"The name 'server' is reserved only for the server in a client-server architecture.\"\n",
     "        )\n",
     "\n",
-    "    actors = FlexActors(\n",
-    "        {client_id: FlexRole.aggregator_client for client_id in clients_ids}\n",
-    "    )\n",
+    "    actors = FlexActors()\n",
+    "\n",
+    "    for clitent_id in clients_ids:\n",
+    "        actors[clitent_id] = FlexRole.aggregator_client\n",
     "\n",
     "    actors['server'] = FlexRole.server\n",
     "\n",
@@ -120,13 +123,13 @@
     "\n",
     "    n_clients_as_aggregators = min(n_clients_as_aggregators, len(clients_ids))\n",
     "\n",
-    "    actors = FlexActors(\n",
-    "        {clients_ids[client_id]: FlexRole.aggregator_client for client_id in range(n_clients_as_aggregators)}\n",
-    "    )\n",
+    "    actors = FlexActors()\n",
     "\n",
-    "    actors.update(\n",
-    "        FlexActors({clients_ids[client_id]: FlexRole.client for client_id in range(n_clients_as_aggregators, len(clients_ids))})\n",
-    "    )\n",
+    "    for client_id in range(n_clients_as_aggregators):\n",
+    "        actors[client_id] = FlexRole.aggregator_client\n",
+    "\n",
+    "    for client_id in range(n_clients_as_aggregators, len(clients_ids)):\n",
+    "        actors[client_id] = FlexRole.client\n",
     "\n",
     "    actors['server'] = FlexRole.server\n",
     "\n",
@@ -175,7 +178,7 @@
     "    import numpy as np\n",
     "\n",
     "    n_clients = len(clients_ids)\n",
-    "    print(f\"Total number of clients: {n_clients}\")\n",
+    "    print(f\"Total number of available clients: {n_clients}\")\n",
     "    n_clients_aggregators = np.random.randint(low=0, high=n_clients//2)\n",
     "    print(f\"Clients as aggregators: {n_clients_aggregators}\")\n",
     "    n_clients_servers = np.random.randint(low=0, high=n_clients-n_clients_aggregators)\n",
@@ -217,6 +220,148 @@
     "print(f\"Clients ids: {clients.actor_ids}\")\n",
     "print(f\"Aggregators ids: {aggregators.actor_ids}\")\n",
     "print(f\"Servers ids: {servers.actor_ids}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another custom architecture that might be present in a real scenario, is one where we have N clients, M aggregators and a server. In this architecture, we try to simulate that the N clients are distributed by locations, and those aggregators that are near those clients, will communicate each other in order to reduce the connection time during training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def real_scenario(clients_ids: list, n_aggregators: int) -> FlexActors:\n",
+    "    if \"server\" in clients_ids:\n",
+    "        raise ValueError(\n",
+    "            \"The name 'server' is reserved only for the server in a client-server architecture.\"\n",
+    "        )\n",
+    "\n",
+    "    actors = FlexActors(\n",
+    "        {clients_ids[client_id]: FlexRole.client for client_id in clients_ids}\n",
+    "    )\n",
+    "\n",
+    "    actors.update(\n",
+    "        FlexActors({f\"aggregator_{agg_id}\": FlexRole.aggregator for agg_id in range(n_aggregators)})\n",
+    "    )\n",
+    "\n",
+    "    actors['server'] = FlexRole.server\n",
+    "\n",
+    "    return actors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_scenario_actors = real_scenario(list(federated_iris.keys()), n_aggregators=2)\n",
+    "\n",
+    "real_scenario_pool = FlexPool(federated_iris, real_scenario_actors)\n",
+    "\n",
+    "clients = real_scenario_pool.clients\n",
+    "aggregators = real_scenario_pool.aggregators\n",
+    "servers = real_scenario_pool.servers\n",
+    "\n",
+    "print(f\"Clients ids: {clients.actor_ids}\")\n",
+    "print(f\"Aggregators ids: {aggregators.actor_ids}\")\n",
+    "print(f\"Servers ids: {servers.actor_ids}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After creating the pool, we can initilize the server model using the `map` function available in the `FlexPool`class, that act as a communication function between the different actors from the same pool. \n",
+    "\n",
+    "In this example, we are going to use the `init_server_model` decorator. To learn more about the `map` function and how to use it with the primitives or the decorators, please, refer to the notebooks that show how to train a model using the different frameworks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.pool.decorators import init_server_model\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "@init_server_model\n",
+    "def define_model(**kwargs):\n",
+    "    from copy import deepcopy\n",
+    "    input_shape = kwargs['input_shape']\n",
+    "    n_classes = kwargs['n_classes']\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(tf.keras.layers.Input(shape=input_shape))\n",
+    "    model.add(tf.keras.layers.Dense(units=64))\n",
+    "    model.add(tf.keras.layers.Dense(n_classes))\n",
+    "    model.compile(\n",
+    "        optimizer='adam',\n",
+    "        loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
+    "        metrics=[tf.metrics.Accuracy(name='accuracy')],\n",
+    "    )\n",
+    "    from flex.model import FlexModel\n",
+    "    server_flex_model = FlexModel()\n",
+    "    server_flex_model[\"model\"] = model\n",
+    "    server_flex_model[\"loss\"] = deepcopy(model.loss)\n",
+    "    server_flex_model[\"metrics\"] = deepcopy(model.compiled_metrics._metrics)\n",
+    "    server_flex_model[\"optimizer\"] = deepcopy(model.optimizer)\n",
+    "    return server_flex_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real_scenario_pool.servers.map(define_model, input_shape=iris.data.shape[1], n_classes=len(set(iris.target)))\n",
+    "\n",
+    "print(\"Let's show the models available in the pool:\")\n",
+    "print(real_scenario_pool._models)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the server model is initilized, and that this model must be deployed to the clients to start training the model."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Usually, we are going to work with the client-server architecture, as is the most common arquitecture in Federated Learning, so we can just simply use the classmethod available in `FlexPool`. Using the `client_server_architecture`or the `p2p_architecture`functions, we have to pass as argument the function that initilize the server model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pool = FlexPool.client_server_architecture(fed_dataset=federated_iris, init_func=define_model, input_shape=iris.data.shape[1], n_classes=len(set(iris.target)))\n",
+    "\n",
+    "clients = pool.clients\n",
+    "aggregators = pool.aggregators\n",
+    "servers = pool.servers\n",
+    "\n",
+    "print(f\"Clients ids: {clients.actor_ids}\")\n",
+    "print(f\"Aggregators ids: {aggregators.actor_ids}\")\n",
+    "print(f\"Servers ids: {servers.actor_ids}\")\n",
+    "\n",
+    "print(f\"Server model initialized: {pool.servers._models}\")"
    ]
   },
   {
