Changed map function name to apply in the FedDataset class.

--- a/notebooks/Federating data with FLEXible.ipynb
+++ b/notebooks/Federating data with FLEXible.ipynb
@@ -374,7 +374,7 @@
     "collapsed": false
    },
    "source": [
-    "If we want, we can normalize the dataset of each client easily, using the `map` function from `FedDataset`, for example we force each client to keep only pair labels:"
+    "If we want, we can normalize the dataset of each client easily, using the `apply` function from `FedDataset`, for example we force each client to keep only pair labels:"
    ]
   },
   {
@@ -393,7 +393,7 @@
     "    y_data = client_dataset.y_data[np.isin(client_dataset.y_data, selected_labels)]\n",
     "    return Dataset(X_data=X_data, y_data=y_data)\n",
     "\n",
-    "randomly_transformed_federated_dataset = personalized_cifar_dataset.map(func=keep_given_labels,  # function to apply\n",
+    "randomly_transformed_federated_dataset = personalized_cifar_dataset.apply(func=keep_given_labels,  # function to apply\n",
     "                                                num_proc=1,\n",
     "                                                selected_labels=[0, 2, 4, 6, 8] # argument for function\n",
     "                                                )\n",
@@ -785,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
