--- a/notebooks/Federated MNIST TF example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST TF example with flexible decorators.ipynb
@@ -293,7 +293,7 @@
     "def train_n_rounds(n_rounds, clients_per_round=20):  \n",
     "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=build_server_model)\n",
     "    for i in range(n_rounds):\n",
-    "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
+    "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
     "        selected_clients = selected_clients_pool.clients\n",
     "        print(f\"Selected clients for this round: {len(selected_clients)}\")\n",
