fix small issues with notebooks

--- a/notebooks/Federate datasets from other libraries with FLEXible.ipynb
+++ b/notebooks/Federate datasets from other libraries with FLEXible.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "# Federate the dataset directly, only using a config.\n",
     "flex_dataset_hf = FedDataDistribution.from_config_with_huggingface_dataset(\n",
-    "    dataset_hf, config_hf, \"text\", \"label\"\n",
+    "    dataset_hf, config_hf, [\"text\"], [\"label\"], lazy=True\n",
     ")\n",
     "\n",
     "print(f\"Flex dataset a data sample from client_0: {flex_dataset_hf[0].X_data[0]}\")"
