--- a/notebooks/Federated MNIST TF example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST TF example with flexible decorators.ipynb
@@ -306,7 +306,9 @@
     "        pool.aggregators.map(aggregate_with_fedavg)\n",
     "        # The aggregator send its aggregated weights to the server\n",
     "        pool.aggregators.map(set_agreggated_weights_to_server, pool.servers)\n",
-    "        pool.servers.map(evaluate_global_model, test_data=test_data)"
+    "        metrics = pool.servers.map(evaluate_global_model, test_data=test_data)\n",
+    "        loss, acc = metrics[0]\n",
+    "        print(f\"Server: Test acc: {acc:.4f}, test loss: {loss:.4f}\")"
    ]
   },
   {
