--- a/notebooks/Federated MNIST TF example with simplified primitives.ipynb
+++ b/notebooks/Federated MNIST TF example with simplified primitives.ipynb
@@ -203,7 +203,7 @@
     "def train_n_rounds(n_rounds, batch_size, epochs, clients_per_round=20):  \n",
     "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=get_model())\n",
     "    for i in range(n_rounds):\n",
-    "        print(f\"\\nRunning round: {i+1} of {n_rounds+1}\")\n",
+    "        print(f\"\\nRunning round: {i+1} of {n_rounds}\")\n",
     "        selected_clients_pool = pool.clients.select(clients_per_round)\n",
     "        selected_clients = selected_clients_pool.clients\n",
     "        print(f\"Selected clients for this round: {len(selected_clients)}\")\n",
