full upgrade to inly use LazyIndexable in Dataset

--- a/notebooks/Create custom architectures using FLEXible.ipynb
+++ b/notebooks/Create custom architectures using FLEXible.ipynb
@@ -42,8 +42,8 @@
     "# Generate train-test splits\n",
     "X_train, X_test, y_train, y_test = train_test_split(iris.data, iris.target, test_size=0.33, random_state=42)\n",
     "\n",
-    "train_iris = Dataset(X_train, y_train)\n",
-    "test_iris = Dataset(X_test, y_test)\n",
+    "train_iris = Dataset.from_numpy(X_train, y_train)\n",
+    "test_iris = Dataset.from_numpy(X_test, y_test)\n",
     "\n",
     "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_clients=5)"
    ]
@@ -391,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
