--- a/notebooks/Federated MNIST TF example with flexible decorators.ipynb
+++ b/notebooks/Federated MNIST TF example with flexible decorators.ipynb
@@ -170,8 +170,9 @@
     "from flex.data import Dataset\n",
     "\n",
     "def train(client_flex_model: FlexModel, client_data: Dataset):\n",
-    "    client_flex_model[\"model\"].fit(client_data.X_data, \n",
-    "                                    client_data.y_data,\n",
+    "    X, y = client_data.to_numpy()\n",
+    "    client_flex_model[\"model\"].fit(X, \n",
+    "                                    y,\n",
     "                                    epochs=5,\n",
     "                                    batch_size=512,\n",
     "                                    verbose=False)\n",
@@ -268,7 +269,8 @@
     "\n",
     "@evaluate_server_model\n",
     "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
-    "    return server_flex_model[\"model\"].evaluate(test_data.X_data, test_data.y_data, verbose=False)\n",
+    "    X, y = test_data.to_numpy()\n",
+    "    return server_flex_model[\"model\"].evaluate(X, y, verbose=False)\n",
     "\n",
     "metrics = servers.map(evaluate_global_model, test_data=test_data)\n",
     "print(metrics[0])"
