--- a/notebooks/Federated MNIST TF example with simplified primitives.ipynb
+++ b/notebooks/Federated MNIST TF example with simplified primitives.ipynb
@@ -178,7 +178,7 @@
    "source": [
     "from flex.pool.primitives import evaluate_server_model_tf\n",
     "\n",
-    "test_examples, test_labels = test_data.X_data, test_data.y_data\n",
+    "test_examples, test_labels = test_data.to_numpy()\n",
     "metrics = server.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)\n",
     "loss, acc = metrics[0]\n",
     "print(f\"Test acc: {acc:.4f}, test loss: {loss:.4f}\")"
@@ -229,6 +229,13 @@
    "source": [
     "train_n_rounds(n_rounds=5, batch_size=512, epochs=5, clients_per_round=20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
