--- a/notebooks/Federating a clustering model.ipynb
+++ b/notebooks/Federating a clustering model.ipynb
@@ -48,8 +48,8 @@
    "source": [
     "from flex.data import FedDataDistribution, Dataset\n",
     "\n",
-    "train_iris = Dataset(X_train, y_train)\n",
-    "test_iris = Dataset(X_test, y_test)\n",
+    "train_iris = Dataset.from_numpy(X_train, y_train)\n",
+    "test_iris = Dataset.from_numpy(X_test, y_test)\n",
     "\n",
     "federated_iris = FedDataDistribution.iid_distribution(train_iris, n_clients=5)"
    ]
@@ -84,8 +84,8 @@
     "    axes[1].set_ylabel('Petal width')\n",
     "    \n",
     "centralized_model = KMeans(n_clusters=3)\n",
-    "centralized_model.fit(train_iris.X_data)\n",
-    "plot_k_means(centralized_model, test_iris.X_data, title=\"Benchmark: K-means using centralized data\")"
+    "centralized_model.fit(train_iris.X_data.to_numpy())\n",
+    "plot_k_means(centralized_model, test_iris.X_data.to_numpy(), title=\"Benchmark: K-means using centralized data\")"
    ]
   },
   {
@@ -314,7 +314,7 @@
     "@evaluate_server_model\n",
     "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
     "    preds = server_flex_model[\"model\"].predict(test_data.X_data)\n",
-    "    plot_k_means(server_flex_model[\"model\"], test_data.X_data, title=\"K-means using federated data\")\n",
+    "    plot_k_means(server_flex_model[\"model\"], test_data.X_data.to_numpy(), title=\"K-means using federated data\")\n",
     "    score_model(test_data.y_data, preds)\n",
     "\n",
     "servers.map(evaluate_global_model, test_data=test_iris)"
@@ -366,8 +366,15 @@
     "print(\"Centralized model scores\")\n",
     "preds = centralized_model.predict(test_iris.X_data)\n",
     "score_model(test_iris.y_data, preds)\n",
-    "plot_k_means(centralized_model, test_iris.X_data, title=\"K-means using centralized data\")"
+    "plot_k_means(centralized_model, test_iris.X_data.to_numpy(), title=\"K-means using centralized data\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
