--- a/notebooks/Federate datasets from other libraries with FLEXible.ipynb
+++ b/notebooks/Federate datasets from other libraries with FLEXible.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "fcd_hf = Dataset.from_huggingface_dataset(\n",
-    "    dataset_hf, X_columns=\"text\", label_columns=\"label\"\n",
+    "    dataset_hf, X_columns=[\"text\"], label_columns=[\"label\"]\n",
     ")\n",
     "\n",
     "# Create a config and federate the dataset\n",
@@ -94,7 +94,7 @@
    "source": [
     "# Federate the dataset directly, only using a config.\n",
     "flex_dataset_hf = FedDataDistribution.from_config_with_huggingface_dataset(\n",
-    "    dataset_hf, config_hf, [\"text\"], [\"label\"], lazy=True\n",
+    "    dataset_hf, config_hf, [\"text\"], [\"label\"]\n",
     ")\n",
     "\n",
     "print(f\"Flex dataset a data sample from client_0: {flex_dataset_hf[0].X_data[0]}\")"
